# term-string

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: simple.rs  test.rs
src/: common_macros.rs  error.rs  lib.rs
src/string/: macros.rs  mod.rs  tests.rs
src/style/: macros.rs  mod.rs  tests.rs
