[package]
name = "term-string"
version = "0.1.0"
authors = ["Mohammad AlSaleh <CE.Mohammad.AlSaleh@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/rust-alt/term-string"
homepage = "https://github.com/rust-alt/term-string"
documentation = "https://docs.rs/term-string"
description = "Provide a string and style types for terminal formatted output."
categories = ["command-line-interface"]

[badges]
travis-ci = { repository = "rust-alt/term-string" }

[dependencies]
term = { git = "https://github.com/rust-alt/term", branch = "use_ansi_if_supported" }
isatty = "0.1"
mashup = "0.1"

[features]
nightly = [] # unused
